[gd_scene load_steps=17 format=3 uid="uid://dmhe6vp64x8ev"]

[ext_resource type="Script" path="res://scripts/duel.gd" id="1_ah3ox"]
[ext_resource type="FontFile" uid="uid://iivpx384oqhw" path="res://assets/fonts/Stock Quote.ttf" id="2_epvv7"]
[ext_resource type="Shader" path="res://shaders/duel.gdshader" id="2_k7pi2"]
[ext_resource type="Texture2D" uid="uid://ts8n24d3nxc6" path="res://assets/Duel Background .png" id="2_tkf2w"]
[ext_resource type="Script" path="res://scripts/instruction_label.gd" id="3_duvt1"]
[ext_resource type="AudioStream" uid="uid://cje0q34bvguj0" path="res://assets/sfx/cock.wav" id="4_7m60k"]
[ext_resource type="Shader" path="res://shaders/noir.gdshader" id="4_bm44m"]
[ext_resource type="AudioStream" uid="uid://chtcyudbw0ie5" path="res://assets/sfx/gunshot.wav" id="5_va0cy"]
[ext_resource type="Texture2D" uid="uid://bd16oco4fwe2y" path="res://assets/Duel_Bubble_.png" id="7_pepj0"]
[ext_resource type="Script" path="res://scripts/bubble.gd" id="8_1dnhd"]
[ext_resource type="Texture2D" uid="uid://disks4jfl00ia" path="res://assets/Duel_Gun.png" id="9_tw5iv"]
[ext_resource type="Texture2D" uid="uid://c08urpejt6g0a" path="res://assets/Duel_Lizzard_Avatar_.png" id="10_lmfqd"]
[ext_resource type="Script" path="res://scripts/lizardgunfloat.gd" id="11_aq81b"]
[ext_resource type="Texture2D" uid="uid://c33s5i7nhetp6" path="res://assets/Goth_Lizard.png" id="13_kbbcb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x7k38"]
shader = ExtResource("4_bm44m")
shader_parameter/desaturation = 0.8
shader_parameter/vignette_strength = 1.0
shader_parameter/vignette_radius = 1.0
shader_parameter/color_tint = Color(1, 1, 1, 1)
shader_parameter/grain_strength = 0.1
shader_parameter/grain_speed = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7f3dr"]
shader = ExtResource("2_k7pi2")
shader_parameter/speed = 1.0
shader_parameter/amplitude = 0.06
shader_parameter/frequency = 2.0
shader_parameter/color_ripple_strength = 0.2
shader_parameter/color_shift = Color(1, 1, 1, 1)

[node name="Duel" type="Node2D"]
script = ExtResource("1_ah3ox")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Background_Duel2" type="Sprite2D" parent="."]
modulate = Color(0.429406, 0, 0.00793645, 1)
self_modulate = Color(0.902014, 0, 0.387265, 1)
material = SubResource("ShaderMaterial_x7k38")
texture = ExtResource("2_tkf2w")

[node name="Background_Duel" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_7f3dr")
texture = ExtResource("2_tkf2w")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="cock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7m60k")
volume_db = 5.0

[node name="gunshot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_va0cy")
volume_db = 5.0

[node name="gunshot2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_va0cy")
volume_db = 5.0
pitch_scale = 0.8

[node name="EnemyCharacter" type="Node2D" parent="."]
position = Vector2(300, 0)
scale = Vector2(0.8, 0.8)

[node name="Bubble" type="Sprite2D" parent="EnemyCharacter"]
modulate = Color(1, 0.52, 0.696, 0.745098)
position = Vector2(18, -2)
texture = ExtResource("7_pepj0")
script = ExtResource("8_1dnhd")

[node name="Gun" type="Sprite2D" parent="EnemyCharacter"]
position = Vector2(-87, 0)
scale = Vector2(-1, 1)
texture = ExtResource("9_tw5iv")
script = ExtResource("11_aq81b")

[node name="Lizard" type="Sprite2D" parent="EnemyCharacter/Gun"]
position = Vector2(-76, -23)
texture = ExtResource("13_kbbcb")

[node name="PlayerCharacter" type="Node2D" parent="."]
position = Vector2(-350, 0)
scale = Vector2(0.8, 0.8)

[node name="Bubble" type="Sprite2D" parent="PlayerCharacter"]
modulate = Color(1, 1, 1, 0.745098)
position = Vector2(18, -2)
texture = ExtResource("7_pepj0")
script = ExtResource("8_1dnhd")

[node name="Gun" type="Sprite2D" parent="PlayerCharacter"]
position = Vector2(87, 12)
texture = ExtResource("9_tw5iv")
script = ExtResource("11_aq81b")

[node name="Lizard" type="Sprite2D" parent="PlayerCharacter/Gun"]
position = Vector2(-76, -23)
texture = ExtResource("10_lmfqd")

[node name="Instruction" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -42.5
offset_right = 252.0
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource("2_epvv7")
theme_override_font_sizes/font_size = 50
text = "WAIT FOR IT!"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_duvt1")
